Remove prompt result
