# server/src/domain/repositories/machine-learning.repository.ts
@@ -31,7 +31,6 @@ export interface DetectFaceResult {
 export interface RecognizeTattoosResult {
   image: string; // base-64 encoded image
   score: number;
-  prompt: string;
 }
 
 export enum ModelType {
